tests/snapshots/parser_tests__err_case_without_switch.diag.snap
---
source: tests/parser_tests.rs
expression: error_msg
---
● E2000: Parse Error
────────────────────────────────────────────────────────────
  → <input>:3:5

     3 │
       │ case 1: print("one")
       │ ^^^
       │

  ⓘ Expected expression
────────────────────────────────────────────────────────────
